# mine_status

./: Cargo.toml  README.md  config.kdl  mine_status.service
.github/workflows/: build-and-release.yaml
src/: config.rs  main.rs  status.rs
